fixup! rewrote highlighter from stretch

--- a/components/appoint.css
+++ b/components/appoint.css
@@ -43,3 +43,11 @@
 	min-height: 1.5rem;
 	padding: 0.75rem;
 }
+
+.appoint__precision {
+	border: none;
+	background: transparent;
+	color: inherit;
+	padding: 0.5em;
+	font-size: 0.75rem;
+}
